# twinr

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: docker-publish.yml
deno/: README.md
front/: package-lock.json  vite.config.ts
front/src/: App.tsx  Clips.tsx  Home.tsx  Settings.tsx  Stream.tsx  Vod.tsx  index.css  index.tsx
front/src/components/: favCh.tsx  footer.tsx  nav.tsx  streamChat.tsx
public/: search.js  stream.js  vod.js
scripts/: sync_front_assets.mjs
src/: main.rs
src/routes/apis/: clipsInfo.ts  streamInfo.ts  vodInfo.ts
src/routes/proxy/: proxyUrl.ts
src/utils/chat/: twitchChatServer.ts
templates/: clip.eta
